objects/vlocity_ins__VlocityUniqueIdGeneratorSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Format__c</fullName>
        <label>Format</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectType__c</fullName>
        <label>Object Type</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>UniqueIdGeneratorSettings</relationshipLabel>
        <relationshipName>UniqueIdGeneratorSettings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Vlocity UniqueId Generator Setting</label>
    <pluralLabel>Vlocity UniqueId Generator Settings</pluralLabel>
</CustomObject>